[package]
name = "process-sync"
version = "0.2.1"
authors = ["Andrei Odintsov <forestryks1@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Forestryks/process-sync-rs"
repository = "https://github.com/Forestryks/process-sync-rs"
description = "Synchronization primitives for multiprocess environments"
readme = "README.md"
keywords = ["mutex", "condvar", "barrier", "multiprocessing"]
edition = "2021"

[dependencies]
libc = "0.2.139"

[[test]]
name = "condvar"
harness = false

[[test]]
name = "mutex"
harness = false

[[test]]
name = "shared_memory"
harness = false
